# lucebox

./: .gitmodules  Dockerfile  Dockerfile.rocm  README.md  variables.md
.copilot/: gem.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  speed-profile.yml
dflash/: CMakeLists.txt  README.md
dflash/docs/: ARCHITECTURE.md
dflash/scripts/: test_server_integration.py
dflash/src/: flashprefill.h  internal.h
dflash/test/: smoke_qwen35moe_hybrid_ffn.cpp  test_server_unit.cpp  test_tokenizer_harness.cpp
docs/specs/: speed-profile.md
harness/: README.md  client_test_runner.py  math_scoring.py
harness/benchmarks/: generation_benchmark.py  run_lucebox_vs_llamacpp.sh
harness/clients/: README.md  common.sh  run_openclaw.sh
optimizations/spark/: README.md  RESULTS.md  pyproject.toml
optimizations/spark/spark/: __init__.py  bench.py  calibrate.py  extract_sessions.py  tokenizer.py  train_pregate.py  validate.py
server/: CMakeLists.txt  DEVELOPER.md  README.md
server/docs/: DS4.md  ENVIRONMENT.md  MIXED_BACKEND.md  SPEC_PREFILL.md
server/hip_compat/: cuda_runtime.h
server/scripts/: bench_llm.py  convert_dflash_to_gguf.py  gguf_dump.py  profile.py  quantize_dflash_draft.py  quantize_draft_q8.py  quantize_gemma_dflash_q8.py  requant_dflash_draft.py
server/src/: device_runtime.h  flashprefill_kernels.hip.cu  internal.h  kv_quant.cpp  kv_quant.h  rms_norm_hip.cu
server/test/: bench_laguna_spark.cpp  test_admission.cpp  test_anchor_transitive.cpp  test_chain_rollback_policy.cpp  test_cuda_pool_shutdown.cpp  test_deepseek4_hc_cuda.cpp  (+17 more)
(+173 files in other folders)
